Version 2.5-0 
=======================
NEW FEATURES
- Add of the function selectgroups() to select most represented and/or
most sensitive groups on which to focus for biological interpretation.
- Add of an RNAseq data with batch effect (zebraf) with an example of use of 
ComBat_seq{sva} to correct the batch effect.
- Add of PCAdataplot() a function to visualize omic data.
- Add of a column named maxychange (maximal absolute y change (up or down) 
from the control) in the output of drcfit() (and so of bmdcalc() and bmdboot())
- Add an argument named scaling in curvesplot() and bmdplotwithgradient()
that enables the scaling of the shifted signal (y - y0) by dividing 
it by maxychange (new output of drcfit).
- Add the function formatdata4DRomics() to format data for DRomics from the 
matrix of the signal measurements and the vector of observed/tested doses.
- Add range4boxplot by default fixed at 1e6 to the arguments of plot functions of 
RNAseqdata(), microarraydata() and continuousomicdata() objects, 
to prevent the automatic plot of many outliers as individual points and so
produce lighter plot files.
- Change the default value of transfo.method in RNAseqdata() (put at "vst" 
when the number of samples is larger than 30)

BUG FIXES
- Make sensitivityplot works even when BMDsummary is not given in input 
("first.quartile" defined as default)


Version 2.4-0 
=======================
NEW FEATURES
- Forbid the use of the "ANOVA" method to select items when more than half of the doses are without replicates (e.g. for in situ data)
- Add of an example data set named insitu_RNAseq_sample.txt for tests and examples
- Add of arguments BMDoutput and BMDtype to plot.drcfit() and 
plotfit2pdf to make possible the add of BMD values and confidence 
intervals on the plot of fits.
- Add of an argument (enablesfequal0inGP) by default at TRUE in drcfit(), to enable
the simplification of the Gauss-probit model with 5 parameters by its version with f = 0 