@@ -83,7 +83,9 @@ In cases where the BMD is not reached at the highest tested dose, \code{NA} is r
    on each selected item sorted in the ascending order of the adjusted p-values returned by function \code{itemselect}. The different columns correspond to the identifier of each item (\code{id}), the row number of this item in the initial data set (\code{irow}), the adjusted p-value of the selection step (\code{adjpvalue}), the name of the best fit model (\code{model}), the number of fitted parameters (\code{nbpar}), the values of the parameters \code{b}, \code{c}, \code{d}, \code{e} and \code{f}, (\code{NA} for non used parameters), the residual standard deviation (\code{SDres}), the typology of the curve (\code{typology}, (16 class typology described in the help of the \code{drcfit} 
    function)), the
    rough trend of the curve (\code{trend}) defined with four classes (U, bell, increasing or decreasing shape), the
-   theoretical value at the control (\code{y0}), the theoretical y range 
+   theoretical y value at the control (\code{y0}),
+   the theoretical y value at the maximal dose \code{yatdosemax}),
+   the theoretical y range 
    for x within the range of tested doses 
    (\code{yrange}), the maximal absolute y change (up or down) from the control(\code{maxychange}) and 
    for biphasic curves 
