@@ -172,7 +172,8 @@ chosen model and of its parameter values :
    \item{fitres}{ a data frame reporting the results of the fit on each selected item 
    for which a successful fit is reached (one line per item) sorted in the ascending order of the adjusted p-values returned by function \code{itemselect}. The different columns correspond to the identifier of each item (\code{id}), the row number of this item in the initial data set (\code{irow}), the adjusted p-value of the selection step (\code{adjpvalue}), the name of the best fit model (\code{model}), the number of fitted parameters (\code{nbpar}), the values of the parameters \code{b}, \code{c}, \code{d}, \code{e} and \code{f}, (\code{NA} for non used parameters), the residual standard deviation (\code{SDres}), the typology of the curve (\code{typology}), the
    rough trend of the curve (\code{trend}) defined with four classes (U, bell, increasing or decreasing shape), the
-   theoretical value at the control \code{y0}), the theoretical y range for x within the range of 
+   theoretical y value at the control \code{y0}), the
+   theoretical y value at the maximal dose \code{yatdosemax}), the theoretical y range for x within the range of 
    tested doses (\code{yrange}), the maximal absolute y change (up or down) from the control(\code{maxychange}) 
    and for biphasic curves 
    the x value at which their extremum is reached (\code{xextrem}) 
